# Ai-FIle-Manager

./: COPILOT.md  README.md  WhatToBuild.md  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: classifier.rs  db.rs  engine.rs  indexer.rs  lib.rs  models.rs
